--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
       - name: Test
-        run: cat test.json | docker run -i --rm $IMAGE_NAME -aa name value
+        run: cat test.json | docker run -i --rm $IMAGE_NAME -ag name value
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
