--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Test
         run: cat test.json | docker run -i --rm $IMAGE_NAME -ag name value
 
-  # Push image to GitHub Packages.
+  # Push image to GitHub Container Registry
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     # Ensure test job passes before pushing image.
