--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -39,6 +39,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          flavor: latest=true
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}, ghcr.io/chorrell/${{ env.IMAGE_NAME }}
+          tags: ${{ env.MAJOR_VERSION }}
+
       - name: Login to DockerHub
         uses: docker/login-action@v1.9.0
         with:
@@ -58,8 +66,5 @@ jobs:
           context: .
           build-args: MAJOR_VERSION=${{ env.MAJOR_VERSION }}
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
-            ghcr.io/chorrell/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/chorrell/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
